--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <h2>Chart:</h2>
     <canvas id="myChart"></canvas>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
