--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <button type="submit" class="btn btn-primary" onclick="calculateRisk()">Calculate Risk</button>
   <div class="output">
     <h2>Output:</h2>
-    <p>Stoploss %: <span id="stoploss-percent"></span></p>
+    <p>Stoploss: <span id="stoploss-percent"></span></p>
     <p>Order quantity: <span id="order-quantity"></span></p>
     <p>Margin: <span id="margin"></span></p>
     <p>Estimated liquidation price: <span id="liquidation-price"></span></p>
